--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Admin Page</title>
+    <title>Admin Page</title> 
 </head>
 <body>
     <h1>This is HTML HAHAHAHAHAHAHAHAHA</h1>
+    <img src="img/in.jpg">
 </body>
 </html>
