--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <title>Admin Page</title> 
 </head>
@@ -16,5 +16,6 @@
  </head>
  <body>
  <?php echo '<p>Hello World</p>'; ?> 
+ <?php phpinfo(); ?>
  </body>
 </html>
