--- a/autoindex.html
+++ b/autoindex.html
@@ -6,34 +6,16 @@
 <hr>
 <table style="width: 40%;">
 <tr>
-<td style="width: 55%;"><a href='html/.'>.</a></td>
-<td>22-Oct-2021 00:31</td>
-<td>0</td>
-</tr>
-<tr>
-<td style="width: 55%;"><a href='html/..'>..</a></td>
-<td>22-Oct-2021 00:31</td>
-<td>0</td>
-</tr>
-<tr>
-<td style="width: 55%;"><a href='html/fold'>fold</a></td>
-<td>22-Oct-2021 00:31</td>
-<td>0</td>
-</tr>
-<tr>
-<td style="width: 55%;"><a href='html/fold2'>fold2</a></td>
-<td>22-Oct-2021 00:31</td>
-<td>0</td>
-</tr>
-<tr>
+<td style="width: 55%;"><pre><a href='html/../'>../</a></pre></td>
+</tr><tr>
 <td style="width: 55%;"><a href='html/test2.html'>test2.html</a></td>
-<td>22-Oct-2021 00:31</td>
-<td>0</td>
+<td>22-Oct-2021 12:23</td>
+<td>22</td>
 </tr>
 <tr>
 <td style="width: 55%;"><a href='html/testing.html'>testing.html</a></td>
-<td>22-Oct-2021 00:31</td>
-<td>0</td>
+<td>22-Oct-2021 13:49</td>
+<td>6</td>
 </tr>
 </table>
 <hr>
