--- a/tests/staticWebsite/index.html
+++ b/tests/staticWebsite/index.html
@@ -1,2 +1,2 @@
-<link  rel="stylesheet" type="text/css" href="a.css"></link>
+<link  rel="stylesheet" type="text/css" href="./a.css"></link>
 <h1>Hello world</h1>
